feat: add security for appsettings

--- a/ApiWebBase/appsettings.json
+++ b/ApiWebBase/appsettings.json
@@ -1,18 +1,11 @@
 {
   "Jwt": {
-    "Key": "sua-chave-super-secreta",
-    "Issuer": "sua-api",
-    "Audience": "sua-audiencia",
-    "AccessTokenExpiryMinutes": 60,
-    "RefreshTokenExpiryDays": 7
+    "Key": "placeholder-key-16chars",
+    "Issuer": "api",
+    "Audience": "audience"
   },
+  "DatabaseProvider": "PostgreSQL",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SuaBase;User Id=usuario;Password=senha;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "DefaultConnection": "Host=placeholder;Port=5432;Database=placeholder;Username=placeholder;Password=placeholder;"
   }
 }
