feat: add config cors

--- a/ApiWebBase/appsettings.json
+++ b/ApiWebBase/appsettings.json
@@ -4,6 +4,9 @@
     "Issuer": "api",
     "Audience": "audience"
   },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:3000" ]
+  },
   "DatabaseProvider": "PostgreSQL",
   "ConnectionStrings": {
     "DefaultConnection": "Host=placeholder;Port=5432;Database=placeholder;Username=placeholder;Password=placeholder;"
