fix: access token expiry

--- a/ApiWebBase/appsettings.json
+++ b/ApiWebBase/appsettings.json
@@ -2,7 +2,8 @@
   "Jwt": {
     "Key": "placeholder-key-16chars",
     "Issuer": "api",
-    "Audience": "audience"
+    "Audience": "audience",
+    "AccessTokenExpiryMinutes": 120
   },
   "Cors": {
     "AllowedOrigins": [ "http://localhost:3000" ]
